--- a/twitter_alamofire_demo/Base.lproj/Main.storyboard
+++ b/twitter_alamofire_demo/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -66,9 +67,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="103" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ctl-bI-Eag">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="103" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ctl-bI-Eag">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetCell" rowHeight="103" id="U1g-kw-izy" customClass="TweetCell" customModule="twitter_alamofire_demo" customModuleProvider="target">
@@ -78,34 +78,112 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="102.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1hQ-pJ-0wn">
+                                                    <rect key="frame" x="8" y="8" width="50" height="50"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="50" id="fL3-B6-pU2"/>
+                                                        <constraint firstAttribute="height" constant="50" id="yJh-vF-jJ8"/>
+                                                    </constraints>
+                                                </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I love tweeting!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="epC-Fs-Q5Z">
-                                                    <rect key="frame" x="8" y="8" width="359" height="20.5"/>
+                                                    <rect key="frame" x="66" y="35.5" width="293" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" text="Agustin Balquin AAAAAAAAAAAAAA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RRL-xE-Bvx">
+                                                    <rect key="frame" x="66" y="8" width="138" height="19.5"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@twitiOSag" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xeZ-cH-pGx">
+                                                    <rect key="frame" x="212" y="6.5" width="90" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ggz-wV-Kwb">
+                                                    <rect key="frame" x="66" y="64.5" width="84" height="30"/>
+                                                    <state key="normal" title="Button" image="reply-icon"/>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BLg-5F-aNJ">
+                                                    <rect key="frame" x="158" y="64" width="30" height="30"/>
+                                                    <state key="normal" image="retweet-icon"/>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="15" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JHg-5M-n7b">
+                                                    <rect key="frame" x="196" y="69" width="19" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6/19/17" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Whg-rP-7A1">
+                                                    <rect key="frame" x="310" y="6.5" width="57" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rHV-yy-W5H">
+                                                    <rect key="frame" x="231" y="64" width="30" height="30"/>
+                                                    <state key="normal" image="favor-icon"/>
+                                                </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="epC-Fs-Q5Z" firstAttribute="top" secondItem="zd2-Er-659" secondAttribute="top" constant="8" id="L9O-b1-wwg"/>
-                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="epC-Fs-Q5Z" secondAttribute="bottom" constant="8" id="QRV-cN-t51"/>
-                                                <constraint firstItem="epC-Fs-Q5Z" firstAttribute="leading" secondItem="zd2-Er-659" secondAttribute="leading" constant="8" id="Rxk-CL-Rn0"/>
-                                                <constraint firstAttribute="trailing" secondItem="epC-Fs-Q5Z" secondAttribute="trailing" constant="8" id="t3O-Hf-fvX"/>
+                                                <constraint firstItem="xeZ-cH-pGx" firstAttribute="baseline" secondItem="RRL-xE-Bvx" secondAttribute="baseline" id="1hm-Dq-F0D"/>
+                                                <constraint firstItem="1hQ-pJ-0wn" firstAttribute="top" secondItem="zd2-Er-659" secondAttribute="top" constant="8" id="6iF-LR-uaG"/>
+                                                <constraint firstItem="1hQ-pJ-0wn" firstAttribute="leading" secondItem="zd2-Er-659" secondAttribute="leading" constant="8" id="A3z-OW-nkm"/>
+                                                <constraint firstItem="Whg-rP-7A1" firstAttribute="leading" secondItem="xeZ-cH-pGx" secondAttribute="trailing" constant="8" id="Bhh-rw-O2n"/>
+                                                <constraint firstItem="RRL-xE-Bvx" firstAttribute="top" secondItem="1hQ-pJ-0wn" secondAttribute="top" id="D0K-Qc-GlM"/>
+                                                <constraint firstItem="rHV-yy-W5H" firstAttribute="leading" secondItem="JHg-5M-n7b" secondAttribute="trailing" constant="16" id="DKd-2f-05J"/>
+                                                <constraint firstItem="BLg-5F-aNJ" firstAttribute="top" relation="greaterThanOrEqual" secondItem="epC-Fs-Q5Z" secondAttribute="bottom" constant="8" id="Eol-dd-ZJX"/>
+                                                <constraint firstItem="epC-Fs-Q5Z" firstAttribute="leading" secondItem="1hQ-pJ-0wn" secondAttribute="trailing" constant="8" id="HPk-zG-4Bk"/>
+                                                <constraint firstItem="Ggz-wV-Kwb" firstAttribute="leading" secondItem="epC-Fs-Q5Z" secondAttribute="leading" id="Ktf-Sg-JQe"/>
+                                                <constraint firstItem="RRL-xE-Bvx" firstAttribute="leading" secondItem="1hQ-pJ-0wn" secondAttribute="trailing" constant="8" id="O6B-KD-5og"/>
+                                                <constraint firstItem="JHg-5M-n7b" firstAttribute="leading" secondItem="BLg-5F-aNJ" secondAttribute="trailing" constant="8" id="TFM-Cn-gcF"/>
+                                                <constraint firstItem="xeZ-cH-pGx" firstAttribute="leading" secondItem="RRL-xE-Bvx" secondAttribute="trailing" constant="8" id="TGM-VZ-ofr"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Whg-rP-7A1" secondAttribute="trailing" constant="8" id="UYY-rN-lqX"/>
+                                                <constraint firstAttribute="bottom" secondItem="Ggz-wV-Kwb" secondAttribute="bottom" constant="8" id="VQU-GN-Efp"/>
+                                                <constraint firstItem="BLg-5F-aNJ" firstAttribute="centerY" secondItem="Ggz-wV-Kwb" secondAttribute="centerY" id="dmw-mA-eng"/>
+                                                <constraint firstItem="epC-Fs-Q5Z" firstAttribute="top" secondItem="RRL-xE-Bvx" secondAttribute="bottom" constant="8" id="gqi-aQ-5br"/>
+                                                <constraint firstItem="rHV-yy-W5H" firstAttribute="centerY" secondItem="JHg-5M-n7b" secondAttribute="centerY" id="mgl-xD-Ocz"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="epC-Fs-Q5Z" secondAttribute="trailing" constant="8" id="mxH-bi-haI"/>
+                                                <constraint firstItem="BLg-5F-aNJ" firstAttribute="leading" secondItem="Ggz-wV-Kwb" secondAttribute="trailing" constant="8" id="rox-Cz-8pO"/>
+                                                <constraint firstItem="JHg-5M-n7b" firstAttribute="centerY" secondItem="BLg-5F-aNJ" secondAttribute="centerY" id="uYh-RP-dM1"/>
+                                                <constraint firstItem="Whg-rP-7A1" firstAttribute="baseline" secondItem="xeZ-cH-pGx" secondAttribute="baseline" id="vfE-YO-HqE"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="createdAtLabel" destination="Whg-rP-7A1" id="YHk-jW-tHC"/>
+                                            <outlet property="nameLabel" destination="RRL-xE-Bvx" id="Y9T-G2-Lbf"/>
+                                            <outlet property="retweetCountLabel" destination="JHg-5M-n7b" id="STL-qO-47M"/>
+                                            <outlet property="screenNameLabel" destination="xeZ-cH-pGx" id="mFN-YY-jso"/>
                                             <outlet property="tweetTextLabel" destination="epC-Fs-Q5Z" id="ZLP-IG-Wsf"/>
+                                            <outlet property="userImageView" destination="1hQ-pJ-0wn" id="Y5n-he-4Ke"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="z6n-U4-hAr" firstAttribute="top" secondItem="Ctl-bI-Eag" secondAttribute="bottom" id="A3p-YF-VAz"/>
+                            <constraint firstItem="Ctl-bI-Eag" firstAttribute="top" secondItem="JNb-nQ-JaL" secondAttribute="top" id="DIB-BM-ekT"/>
+                            <constraint firstItem="Ctl-bI-Eag" firstAttribute="leading" secondItem="JNb-nQ-JaL" secondAttribute="leading" id="YFX-HU-RMO"/>
+                            <constraint firstAttribute="trailing" secondItem="Ctl-bI-Eag" secondAttribute="trailing" id="fG6-7A-Wj5"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Home Timeline" id="9Zi-uW-GTS">
-                        <barButtonItem key="rightBarButtonItem" title="Logout" id="hz2-ji-ft0">
+                        <barButtonItem key="leftBarButtonItem" title="Logout" id="hz2-ji-ft0">
                             <connections>
                                 <action selector="didTapLogout:" destination="5YO-Vh-39k" id="fM7-h5-mq1"/>
                             </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="ORG-MJ-azl">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="6eA-iP-n7n">
+                                <rect key="frame" x="276" y="7" width="30" height="27"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="edit-icon"/>
+                            </button>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
@@ -137,5 +215,9 @@
     </scenes>
     <resources>
         <image name="TwitterLogoBlue" width="200" height="200"/>
+        <image name="edit-icon" width="30" height="27"/>
+        <image name="favor-icon" width="30" height="30"/>
+        <image name="reply-icon" width="30" height="30"/>
+        <image name="retweet-icon" width="30" height="30"/>
     </resources>
 </document>
