--- a/twitter_alamofire_demo/Base.lproj/Main.storyboard
+++ b/twitter_alamofire_demo/Base.lproj/Main.storyboard
@@ -229,20 +229,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uJl-WP-mgv">
-                                <rect key="frame" x="34" y="77" width="50" height="50"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uJl-WP-mgv">
+                                <rect key="frame" x="32" y="72" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="21r-N7-S5c"/>
+                                    <constraint firstAttribute="width" constant="50" id="3hZ-Aq-0Xr"/>
+                                </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="@twitiOSag" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LqP-ed-TlX">
-                                <rect key="frame" x="92" y="106" width="90" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@twitiOSag" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LqP-ed-TlX">
+                                <rect key="frame" x="90" y="101" width="90" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="This is a text tweet" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Gm-Nd-cX7">
-                                <rect key="frame" x="34" y="202" width="298" height="195"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="This is a text tweet" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Gm-Nd-cX7">
+                                <rect key="frame" x="32" y="162" width="249" height="170"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -271,9 +272,8 @@
                                 <rect key="frame" x="47" y="438" width="84" height="30"/>
                                 <state key="normal" title="Button" image="reply-icon"/>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ad1-XP-d86">
-                                <rect key="frame" x="85" y="72" width="138" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ad1-XP-d86">
+                                <rect key="frame" x="90" y="72" width="125" height="33"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                 <state key="normal" title="Agustin Balquin">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -285,14 +285,23 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="LqP-ed-TlX" firstAttribute="bottom" secondItem="uJl-WP-mgv" secondAttribute="bottom" id="1XM-3t-3mS"/>
                             <constraint firstItem="lwh-j7-sKl" firstAttribute="centerY" secondItem="2oQ-OI-1g4" secondAttribute="centerY" id="5sU-yM-71C"/>
+                            <constraint firstItem="LqP-ed-TlX" firstAttribute="leading" secondItem="ad1-XP-d86" secondAttribute="leading" id="7UK-YJ-0J2"/>
                             <constraint firstItem="o6A-d2-Ndb" firstAttribute="centerY" secondItem="lwh-j7-sKl" secondAttribute="centerY" id="ATL-PK-fve"/>
                             <constraint firstItem="3LR-E8-zHR" firstAttribute="leading" secondItem="o6A-d2-Ndb" secondAttribute="trailing" constant="8" id="JLG-pu-U75"/>
+                            <constraint firstItem="uJl-WP-mgv" firstAttribute="top" secondItem="dai-g6-zlX" secondAttribute="bottom" constant="8" id="LaF-Ip-gJG"/>
+                            <constraint firstItem="ad1-XP-d86" firstAttribute="top" secondItem="uJl-WP-mgv" secondAttribute="top" id="Lqu-Wb-Cz8"/>
+                            <constraint firstItem="4Gm-Nd-cX7" firstAttribute="top" secondItem="LqP-ed-TlX" secondAttribute="bottom" constant="40" id="PCv-w2-TrC"/>
                             <constraint firstItem="3LR-E8-zHR" firstAttribute="centerY" secondItem="o6A-d2-Ndb" secondAttribute="centerY" id="RpD-s7-geY"/>
+                            <constraint firstItem="4Gm-Nd-cX7" firstAttribute="leading" secondItem="uJl-WP-mgv" secondAttribute="leading" id="ShH-Nf-R8x"/>
                             <constraint firstItem="lwh-j7-sKl" firstAttribute="leading" secondItem="2oQ-OI-1g4" secondAttribute="trailing" constant="8" id="Ymn-XG-lmA"/>
                             <constraint firstItem="2oQ-OI-1g4" firstAttribute="leading" secondItem="Ecs-oB-xe6" secondAttribute="trailing" constant="8" id="kfL-lJ-FAO"/>
+                            <constraint firstItem="uJl-WP-mgv" firstAttribute="leading" secondItem="Uvt-r0-GIH" secondAttribute="leadingMargin" constant="16" id="kij-Dr-XCO"/>
                             <constraint firstItem="2oQ-OI-1g4" firstAttribute="centerY" secondItem="Ecs-oB-xe6" secondAttribute="centerY" id="oPv-cW-xRY"/>
                             <constraint firstItem="o6A-d2-Ndb" firstAttribute="leading" secondItem="lwh-j7-sKl" secondAttribute="trailing" constant="16" id="td4-1E-7bA"/>
+                            <constraint firstItem="ad1-XP-d86" firstAttribute="leading" secondItem="uJl-WP-mgv" secondAttribute="trailing" constant="8" id="wwt-wG-7F2"/>
+                            <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="ad1-XP-d86" secondAttribute="trailing" constant="8" id="zfC-rf-b94"/>
                         </constraints>
                     </view>
                     <connections>
